--- a/carport.ui
+++ b/carport.ui
@@ -27,6 +27,9 @@
        <property name="text">
         <string>车位号：</string>
        </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
       </widget>
      </item>
      <item row="0" column="1">
@@ -39,6 +42,9 @@
        <property name="text">
         <string>01</string>
        </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
       </widget>
      </item>
      <item row="0" column="2">
@@ -47,14 +53,17 @@
         <string notr="true">background-color: rgb(0, 170, 255);</string>
        </property>
        <property name="text">
-        <string>是否已有车</string>
+        <string>停车</string>
        </property>
       </widget>
      </item>
      <item row="0" column="3">
       <widget class="QLabel" name="labelCardId">
        <property name="text">
-        <string>TextLabel</string>
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
