--- a/parking.ui
+++ b/parking.ui
@@ -15,43 +15,117 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_4">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="styleSheet">
        <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="pageMain">
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="0" column="0">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item row="3" column="1">
+         <widget class="QPushButton" name="pushButtonSysInfo">
+          <property name="minimumSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>关于系统</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
          <widget class="QPushButton" name="pushButtonCheck">
+          <property name="minimumSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
           <property name="text">
            <string>查询</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QPushButton" name="pushButtonEnter">
-          <property name="text">
-           <string>入库</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
+        <item row="2" column="1">
          <widget class="QPushButton" name="pushButtonOut">
+          <property name="minimumSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
           <property name="text">
            <string>出库</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
-         <widget class="QPushButton" name="pushButtonSysInfo">
+        <item row="1" column="1">
+         <widget class="QPushButton" name="pushButtonEnter">
+          <property name="minimumSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
           <property name="text">
-           <string>关于系统</string>
+           <string>入库</string>
           </property>
          </widget>
+        </item>
+        <item row="0" column="0">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="2">
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </widget>
@@ -66,15 +140,15 @@
          </rect>
         </property>
         <property name="currentIndex">
-         <number>3</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="page">
          <property name="geometry">
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>98</width>
-           <height>89</height>
+           <width>761</width>
+           <height>287</height>
           </rect>
          </property>
          <attribute name="label">
@@ -91,8 +165,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>98</width>
-               <height>28</height>
+               <width>741</width>
+               <height>267</height>
               </rect>
              </property>
             </widget>
@@ -105,8 +179,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>98</width>
-           <height>89</height>
+           <width>761</width>
+           <height>287</height>
           </rect>
          </property>
          <attribute name="label">
@@ -123,8 +197,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>98</width>
-               <height>28</height>
+               <width>741</width>
+               <height>267</height>
               </rect>
              </property>
             </widget>
@@ -137,8 +211,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>98</width>
-           <height>89</height>
+           <width>761</width>
+           <height>287</height>
           </rect>
          </property>
          <attribute name="label">
@@ -155,8 +229,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>98</width>
-               <height>28</height>
+               <width>741</width>
+               <height>267</height>
               </rect>
              </property>
             </widget>
@@ -169,8 +243,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>98</width>
-           <height>89</height>
+           <width>761</width>
+           <height>287</height>
           </rect>
          </property>
          <attribute name="label">
@@ -187,8 +261,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>98</width>
-               <height>28</height>
+               <width>741</width>
+               <height>267</height>
               </rect>
              </property>
             </widget>
@@ -336,8 +410,8 @@
        <widget class="QLabel" name="label_10">
         <property name="geometry">
          <rect>
-          <x>20</x>
-          <y>20</y>
+          <x>10</x>
+          <y>0</y>
           <width>111</width>
           <height>41</height>
          </rect>
@@ -442,7 +516,7 @@
          <rect>
           <x>340</x>
           <y>100</y>
-          <width>230</width>
+          <width>261</width>
           <height>40</height>
          </rect>
         </property>
@@ -452,7 +526,7 @@
          <rect>
           <x>340</x>
           <y>160</y>
-          <width>230</width>
+          <width>261</width>
           <height>40</height>
          </rect>
         </property>
@@ -478,7 +552,7 @@
          <rect>
           <x>340</x>
           <y>220</y>
-          <width>230</width>
+          <width>261</width>
           <height>40</height>
          </rect>
         </property>
@@ -515,14 +589,40 @@
        <widget class="QLabel" name="label_9">
         <property name="geometry">
          <rect>
-          <x>20</x>
-          <y>30</y>
+          <x>10</x>
+          <y>0</y>
           <width>91</width>
           <height>41</height>
          </rect>
         </property>
         <property name="text">
          <string>当前状态：出库</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="pushButtonSureOut">
+        <property name="geometry">
+         <rect>
+          <x>260</x>
+          <y>350</y>
+          <width>75</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>确定</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="pushButtonBackOut">
+        <property name="geometry">
+         <rect>
+          <x>440</x>
+          <y>350</y>
+          <width>75</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>返回</string>
         </property>
        </widget>
       </widget>
@@ -545,7 +645,7 @@
          <rect>
           <x>340</x>
           <y>100</y>
-          <width>230</width>
+          <width>251</width>
           <height>40</height>
          </rect>
         </property>
@@ -599,7 +699,7 @@
          <rect>
           <x>340</x>
           <y>160</y>
-          <width>230</width>
+          <width>251</width>
           <height>40</height>
          </rect>
         </property>
@@ -644,7 +744,7 @@
          <rect>
           <x>340</x>
           <y>220</y>
-          <width>230</width>
+          <width>251</width>
           <height>40</height>
          </rect>
         </property>
@@ -682,7 +782,7 @@
          <rect>
           <x>340</x>
           <y>50</y>
-          <width>230</width>
+          <width>251</width>
           <height>40</height>
          </rect>
         </property>
@@ -754,6 +854,7 @@
     <property name="title">
      <string>查询</string>
     </property>
+    <addaction name="action"/>
    </widget>
    <addaction name="menu_3"/>
    <addaction name="menu"/>
@@ -802,6 +903,14 @@
    </property>
    <property name="toolTip">
     <string>退出系统</string>
+   </property>
+  </action>
+  <action name="action">
+   <property name="text">
+    <string>查询</string>
+   </property>
+   <property name="toolTip">
+    <string>查询</string>
    </property>
   </action>
  </widget>
